# nh-alsa-rawmidi

./: nh-alsa-rawmidi.cabal
Sound/NH/ALSA/: RawMidi.hsc
examples/: DumpMidi.hs
